package com.pattern.creational.factorymethod;

public interface Shape {

    void draw();
}
