package com.pattern.creational.factorymethod;

public interface ShapeFactory {
    Shape getShape(String type);
}
