package com.pattern.creational.factorymethod;

public class Square implements Shape{
    @Override
    public void draw() {
        System.out.println("Drawing square");
    }
}
